[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "tonemapping_luts",
    "default_font",
], default-features = false }
bevy-ui-dsl = "0.7.1"
bevy_mod_picking = { version = "0.17.0", default-features = false, features = [
    "backend_raycast",
    "selection",
    "highlight",
] }
