[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
game = { path = "../game" }
bevy = { version = "0.12.0", features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "tonemapping_luts",
    "default_font",
], default-features = false }
bevy_renet = { version = "0.0.10", features = ["serde"] }
bincode = "1.3.3"
